Revision history for Perl module Dackup:

0.34
     - add README file

0.33 Tue Feb 17 21:07:34 CST 2009
     - initial release