@@ -2,6 +2,8 @@ Revision history for Perl module Dackup:
 
 0.34
      - add README file
+     - add dry_run option
+     - put messages in the progressbar instead of warning
 
 0.33 Tue Feb 17 21:07:34 CST 2009
      - initial release
